# VeritasBuilder

./: Architecture.cmake  CMakeLists.txt  Compiler.cmake  Platform.Android.cmake  Platform.Emscripten.cmake  Platform.cmake  README.md
