IF(COMMAND VERITAS_SET_PROPERTIES) # Cheap include guard
RETURN()
ENDIF()

INCLUDE("Compiler.cmake")
INCLUDE("Architecture.cmake")
INCLUDE("Platform.cmake")

FUNCTION(VERITAS_SET_PROPERTIES TARGET)
    VERITAS_SET_COMPILER_PROPERTIES(${TARGET} ${ARGN})
    VERITAS_SET_ARCHITECTURE_PROPERTIES(${TARGET} ${ARGN})
    VERITAS_SET_PLATFORM_PROPERTIES(${TARGET} ${ARGN})
ENDFUNCTION()

FUNCTION(ADD_EXECUTABLE TARGET)
    IF (${CMAKE_SYSTEM_NAME} STREQUAL "Android")
        ADD_LIBRARY(${TARGET} MODULE ${ARGN})
    ELSE()
        _ADD_EXECUTABLE(${TARGET} ${ARGN})
    ENDIF()
    VERITAS_SET_PROPERTIES(${TARGET} ${ARGN})
    VERITAS_PLATFORM_ADD_EXECUTABLE(${TARGET} ${ARGN})
ENDFUNCTION()

FUNCTION(ADD_LIBRARY TARGET)
    _ADD_LIBRARY(${TARGET} ${ARGN})
    VERITAS_SET_PROPERTIES(${TARGET} ${ARGN})
ENDFUNCTION()
